fixed heading overflow

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 /* Fancy Heading */
 .fancy-heading {
-    font-size: 3rem; /* Make it much bigger */
+    font-size: 2.5rem; /* Make it much bigger */
     font-weight: 700;
     text-align: center;
     line-height: 1.2;
